--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <div class="text-center mt-5">
-        <h1 id="pageTitle" class="clickable">¡Bienvenido a la Primavera!</h1>
+        <h1 id="pageTitle" class="clickable">¡Bienvenida a la Primavera!</h1>
         <div id="content" class="mt-4"></div>
       </div>
     </div>
